--- a/src/components/desktop/Splash.scss
+++ b/src/components/desktop/Splash.scss
@@ -6,7 +6,7 @@ $ken-size: 96px;
   position: absolute;
   width: 100vw;
   height: 100vh;
-  z-index: 200;
+  z-index: 99999999;
   background-color: #07135F;
   text-align: center;
 
