--- a/src/components/mobile/HomeScreen.scss
+++ b/src/components/mobile/HomeScreen.scss
@@ -42,7 +42,7 @@ $icon-size: 54px;
   color: white !important;
   font-weight: 400 !important;
   position: absolute;
-  z-index: 999;
+  z-index: 10;
   width: 100%;
   box-sizing: border-box;
 }
